--- a/style.css
+++ b/style.css
@@ -3,17 +3,26 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-color: sandybrown;
 }
 
 #container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 350px;
+    background-color: black;
+    padding: 20px;
 }
 
 #display {
     margin-bottom: 10px;
-    height: 30px;
+    height: 50px;
+    width: 300px;
+    background-color: orange;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #calculator {
